--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
+* {
+  font-family: 'Inter', sans-serif;
+}
+
 body {
+  background-color: #202020;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  
+  color: white;
 }
 
 code {
+  color: white;
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  min-height: 80px;
 }
