--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,6 +1,8 @@
 .navbar {
-  background: #222222;
-  height: 80px;
+  background: rgba(22, 22, 22, 0.0);
+  backdrop-filter: blur(5px);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  height: 68px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -8,9 +10,6 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.04);
-  -moz-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.04);
-  box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.04);
 }
 
 .navbar-container {
@@ -34,15 +33,14 @@
   justify-self: start;
   cursor: pointer;
   text-decoration: none;
-  font-size: 1.2rem;
+  font-size: 1.0rem;
   display: flex;
   align-items: center;
 }
 
 .navbar-icon {
-  margin-right: 1.2rem;
-  max-width: 50px;
-  
+  margin-right: 0.8rem;
+  max-width: 30px;
 }
 
 .nav-menu {
@@ -55,7 +53,6 @@
 }
 
 .nav-item {
-  
   /* border-bottom: 2px solid white; */
   transition: 0.5s;
 }
@@ -74,10 +71,11 @@
   padding: 0.5rem 1rem;
   height: 100%;
   transition: 0.31s;
+  font-size: 16px;
 }
 
 .nav-links:hover {
-  color: #ffffff;
+  color: #37c1da;
 }
 
 .fa-bars {
@@ -172,3 +170,8 @@
   }
 }
 
+.logo-title{
+    font-size: 30px;
+    font-weight: 200;
+    letter-spacing: 2px;
+}
