--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
 }
 
 .footer-container {
-  background-color: #222222;
+  background-color: #1b1b1b;
   padding: 4rem 0 2rem 0;
   display: flex;
   flex-direction: column;
