--- a/src/Pages/Landing/Landing.css
+++ b/src/Pages/Landing/Landing.css
@@ -27,10 +27,10 @@
   margin-bottom: 10px;
   font-weight: 800;
   max-width: 900px;
-  background: #fff;
+  /* background: #fff; */
   /* background: -webkit-linear-gradient(45deg, #15a4f7, #17ffd8 80%); */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  /* -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 
 .landing__text-description{
@@ -56,8 +56,8 @@
 }
 
 .landing__image{
-  margin: 0px 0 300px;
-  max-width: 200px;
+  margin: -22px 0 300px;
+  max-width: 1000px;
 }
 
 @media screen and (max-width: 820px) {
