--- a/src/Pages/UjiHipotesis/UjiHipotesis.css
+++ b/src/Pages/UjiHipotesis/UjiHipotesis.css
@@ -27,10 +27,10 @@
   margin-bottom: 10px;
   font-weight: 800;
   max-width: 900px;
-  background: #fff;
+  color: #fff;
   /* background: -webkit-linear-gradient(45deg, #15a4f7, #17ffd8 80%); */
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  /* -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent; */
 }
 
 .uji-hipotesis__text-description{
@@ -53,11 +53,6 @@
   cursor: help;
   font-size: 14px;
   
-}
-
-.landing__image{
-  margin: 100px 0 300px;
-  max-width: 700px;
 }
 
 @media screen and (max-width: 820px) {
