--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -78,9 +78,9 @@
 .footer-link-items {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
-  margin: 16px;
-  text-align: left;
+  align-items: center;
+  margin: 16px 0 50px;
+  text-align: center;
   width: 160px;
   box-sizing: border-box;
 }
@@ -158,7 +158,9 @@
 
 .website-rights {
   color: var(--gray-text);
+  font-size: 18px;
   margin-bottom: 16px;
+  align-content: center;
 }
 
 @media screen and (max-width: 820px) {
@@ -178,7 +180,5 @@
     flex-direction: column;
   }
 
-  .social-media-wrap {
-    flex-direction: column;
-  }
+
 }
