--- a/src/Pages/UjiHipotesis/components/Questions.css
+++ b/src/Pages/UjiHipotesis/components/Questions.css
@@ -14,7 +14,8 @@
 
 .questions__options {
     display: flex;
-    padding: 10px;
+    justify-content: flex-start;
+    padding-right: 20px;
 }
 
 .questions__option-buttons {
