--- a/src/Pages/UjiHipotesis/components/Questions.css
+++ b/src/Pages/UjiHipotesis/components/Questions.css
@@ -1,24 +1,42 @@
 .questions {
-    border-radius: 10px;
-    border: 0px solid white;
-    background-color: transparent;
-    width: 800px;
-    height: 300px;
-    margin: 0 auto 0;
-    padding: 10px 40px;
+  border-radius: 10px;
+  border: 0px solid white;
+  background-color: transparent;
+  width: 800px;
+  height: 300px;
+  margin: 0 auto 0;
+  padding: 10px 40px;
+}
+
+.questions__head {
+    display: flex;
+    justify-content: space-between;
 }
 
 .questions__question {
-    font-size: 22px;
+  font-size: 22px;
 }
 
 .questions__options {
-    display: flex;
-    justify-content: flex-start;
-    padding-right: 20px;
+  display: flex;
+  justify-content: flex-start;
+  padding-right: 20px;
 }
 
 .questions__option-buttons {
-    padding: 0 10px 0;
+  padding: 0 10px 0;
 }
 
+.questions__ask {
+  margin-top: 20px;
+  margin-left: 1px;
+
+  cursor: pointer;
+  min-width: fit-content;
+}
+
+.questions__question {
+  text-decoration: none;
+  font-size: 16px;
+  color: #9e9e9e;
+}
