--- a/src/Pages/UjiHipotesis/components/Questions.css
+++ b/src/Pages/UjiHipotesis/components/Questions.css
@@ -9,8 +9,8 @@
 }
 
 .questions__head {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .questions__question {
@@ -39,4 +39,36 @@
   text-decoration: none;
   font-size: 16px;
   color: #9e9e9e;
+}
+
+.questions__button {
+  border-radius: 5px;
+  border: 1.5px solid rgb(138, 138, 138);
+  background: transparent;
+  color: rgb(238, 238, 238);
+  font-weight: 400;
+  padding: 15px 20px;
+  transition: 0.4s;
+  cursor: pointer;
+}
+
+.questions__button:hover {
+  border: 1.5px solid rgb(47, 163, 240);
+  background: linear-gradient(
+    30deg,
+    rgb(47, 163, 240) 0%,
+    rgb(24, 175, 150) 100%
+  );
+  color: #fff;
+  box-shadow: 0px 0px 0px 4px rgba(38, 161, 218, 0.14);
+}
+
+.active {
+   border: 1.5px solid rgb(47, 163, 240);
+  background: linear-gradient(
+    30deg,
+    rgb(47, 163, 240) 0%,
+    rgb(24, 175, 150) 100%
+  ); 
+  /* color: rgb(255, 0, 0); */
 }
