--- a/src/Pages/UjiHipotesis/components/Questions.css
+++ b/src/Pages/UjiHipotesis/components/Questions.css
@@ -1,20 +1,31 @@
 .questions {
   border-radius: 10px;
-  border: 0px solid white;
-  background-color: transparent;
+  border: 2px solid rgb(32, 32, 32);
+  background-color:  rgba(26, 26, 26, 0.596);
   width: 800px;
-  height: 300px;
-  margin: 0 auto 0;
+  min-height: 230px;
+  margin: 0 auto 50px;
   padding: 10px 40px;
+}
+
+@media screen and (max-width: 800px) {
+  .questions {
+    transform: scale(0.94);
+    background-color: transparent;
+    width: 300px;
+    min-height: 300px;
+    margin: 0 auto 0;
+    padding: 30px 40px;
+  }
+}
+
+.questions__title {
+  color: #eeeeee;
 }
 
 .questions__head {
   display: flex;
   justify-content: space-between;
-}
-
-.questions__question {
-  font-size: 22px;
 }
 
 .questions__options {
@@ -63,12 +74,12 @@
   box-shadow: 0px 0px 0px 4px rgba(38, 161, 218, 0.14);
 }
 
-.active {
-   border: 1.5px solid rgb(47, 163, 240);
+.active-question {
+  border: 1.5px solid rgb(47, 163, 240);
   background: linear-gradient(
     30deg,
     rgb(47, 163, 240) 0%,
     rgb(24, 175, 150) 100%
-  ); 
+  );
   /* color: rgb(255, 0, 0); */
 }
