--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -48,7 +48,7 @@
   align-items: center;
   justify-content: center;
   list-style: none;
-  text-align: center;
+  
   flex: end;
 }
 
@@ -64,7 +64,7 @@
 
 .nav-links {
   /* font-family: 'Barlow Condensed', sans-serif; */
-  color: #d1d1d1;
+  color: #acacac;
   display: flex;
   align-items: center;
   text-decoration: none;
@@ -94,33 +94,31 @@
   .nav-menu {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    height: 90vh;
+    width: 100vw;
     position: absolute;
-    top: 60px;
-    left: -100%;
-    opacity: 1;
-    transition: all 0.5s ease;
+    margin: 0 0;
+    top: 80px;
+    opacity: 0;
+    left: 0;
+    transition: 0.3s ease-out ;
+    border-bottom: 1px solid rgb(41, 41, 41);
   }
 
   .nav-menu.active {
     background: #1d1d1d;
     left: 0;
     opacity: 1;
-    transition: all 0.6s ease;
+    transition: all 0.1s ease;
     z-index: 1;
   }
 
   .nav-links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
+    padding: 1.4rem 0px;
     display: table;
   }
 
   .nav-links:hover {
-    color: #c8596b;
-    transform: scale(1.2);
+    color: #ffffff;
     transition: all 0.3s ease;
   }
 
