--- a/src/Pages/UjiHipotesis/UjiHipotesis.css
+++ b/src/Pages/UjiHipotesis/UjiHipotesis.css
@@ -62,4 +62,33 @@
   }
 }
 
+.selesai__button {
+  border-radius: 8px;
+  border: 2px solid rgba(172, 172, 172, 0.521);
+  box-shadow: 0px 0px 0px 4px rgba(97, 97, 97, 0.14);
+  background: transparent;
+  color: rgb(238, 238, 238);
+  
+  font-weight: 200;
+  padding: 15px 20px;
+  transition: 0.4s;
+  cursor: pointer;
+  max-width: 150px;
+  
+  text-align: center;
+  font-size: 27px;
+  margin: 30px auto 50px;
+}
+
+.selesai__button:hover {
+  border: 2px solid rgb(47, 163, 240);
+  background: linear-gradient(
+    30deg,
+    rgb(47, 163, 240) 0%,
+    rgb(24, 175, 150) 100%
+  );
+  color: #fff;
+  box-shadow: 0px 0px 0px 4px rgba(38, 161, 218, 0.14);
+}
+
 
