--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  background: rgba(22, 22, 22, 0.0);
+  background: rgba(22, 22, 22, 0);
   backdrop-filter: blur(5px);
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   height: 68px;
@@ -33,14 +33,14 @@
   justify-self: start;
   cursor: pointer;
   text-decoration: none;
-  font-size: 1.0rem;
+  font-size: 1rem;
   display: flex;
   align-items: center;
 }
 
 .navbar-icon {
   margin-right: 0.8rem;
-  max-width: 30px;
+  max-width: 25px;
 }
 
 .nav-menu {
@@ -48,7 +48,7 @@
   align-items: center;
   justify-content: center;
   list-style: none;
-  
+
   flex: end;
 }
 
@@ -70,7 +70,7 @@
 }
 
 .nav-links:hover {
-  color: #37c1da;
+  color: #f1f1f1;
 }
 
 .fa-bars {
@@ -81,84 +81,26 @@
   display: none;
 }
 
-@media screen and (max-width: 960px) {
-  .NavbarItems {
-    position: relative;
+@media screen and (max-width: 550px) {
+  .navbar {
+    height: 30px !important;
   }
-
+  .navbar-container {
+    height: 30px !important;
+  }
   .nav-menu {
-    display: flex;
-    flex-direction: column;
-    width: calc(100% - 40px);
+    display: none;
+  }
+  .navbar-logo{
+    transform: scale(0.8);
     position: absolute;
-    margin: 0 0;
-    top: 80px;
-    opacity: 0;
-    left: 0px;
-    transition: 0.3s ease-out ;
-    border-bottom: 1px solid rgb(41, 41, 41);
-  }
-
-  .nav-menu.active {
-    background: #1d1d1d;
-    left: 0;
-    opacity: 1;
-    transition: all 0.1s ease;
-    z-index: 1;
-  }
-
-  .nav-links {
-    padding: 1.4rem 0px;
-    display: table;
-  }
-
-  .nav-links:hover {
-    color: #ffffff;
-    transition: all 0.3s ease;
-  }
-
-  .nav-item:hover {
-    border: none;
-  }
-
-  .nav-item {
-    width: 100%;
-  }
-
-  .navbar-logo {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translate(30px, 20px);
-  }
-
-  .menu-icon {
-    /* show navbar menu */
-    display: block;
-    position: absolute;
-    top: 0;
-    right: 0;
-    transform: translate(-100%, 60%);
-    font-size: 1.8rem;
-    cursor: pointer;
-  }
-
-  .fa-times {
-    color: #276788;
-    font-size: 2rem;
-  }
-
-  .nav-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 120px;
+    top: 20px;
+    left: 10px;
   }
 }
 
-.logo-title{
-    font-size: 30px;
-    font-weight: 200;
-    letter-spacing: 2px;
+.logo-title {
+  font-size: 30px;
+  font-weight: 200;
+  letter-spacing: 2px;
 }
