--- a/src/Pages/Konsultasi/Konsultasi.css
+++ b/src/Pages/Konsultasi/Konsultasi.css
@@ -3,7 +3,12 @@
   --light-gray-text: #e9e9e9;
 }
 
-.subsection__text {
+.konsultasi__subsection-title {
+  text-align: center;
+  font-size: 40px;
+}
+
+.konsultasi__subsection-text {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -18,13 +23,7 @@
   line-height: 1.5;
 }
 
-.subsection__container {
+.konsultasi__subsection-container {
   background-color: #272727;
   padding: 3rem;
-  
-}
-
-.subsection__title{
-  text-align: center;
-  font-size: 40px;
 }
