--- a/src/Pages/UjiHipotesis/UjiHipotesis.css
+++ b/src/Pages/UjiHipotesis/UjiHipotesis.css
@@ -16,7 +16,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin: 0 50px 20px 50px;
+  margin: 0 50px 120px 50px;
   padding: 14px;
   color: var(--light-gray-text);
   line-height: 1.5;
@@ -61,6 +61,7 @@
   }
   .uji-hipotesis__text {
     margin: auto;
+    margin-bottom: 70px;
   }
 }
 
